--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "chester-react-personal-portfolio-template",
   "version": "1.0.0",
+  "engines": {
+    "npm": "6.13.6",
+    "node": "10.16.0"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
