--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.4.5"
-  },
-  "devDependencies": {
+    "nodemailer": "^6.4.5",
     "nodemon": "^2.0.2"
-  }
+  },
+  "devDependencies": {}
 }
